fixed wrapping issue on the card text (roles)

--- a/src/components/ProjectCard.module.css
+++ b/src/components/ProjectCard.module.css
@@ -26,7 +26,7 @@
 
 .teamInline {
   display: inline-block;
-  white-space: nowrap;
+
   /* vertical-align: middle; */
   padding-left: 0.25rem;
   padding-right: 0.25rem;
